src/main/antlr4/edu/byu/cs/vv/Parser/JTAParser.g4
parser grammar JTAParser;

options {
tokenVocab=JTALexer;
}

program      : thread+ EOF;

thread       : threadHeader
               (operation)*;

branch       : IF OpenBlock Identifier Comparator Number CloseBlock
               OpenBlock (operation)* CloseBlock
               OpenBlock (operation)* CloseBlock;

threadHeader : Thread Identifier;

operation    : (mutate | read | receive | send | block);

mutate       : Mutate Identifier;

read         : Read Identifier;

receive      : Recv Identifier Identifier;

send         : Send Identifier Identifier;

block        : Wait Identifier;
